# ROS2-Igus-Einfuehrung-Robotik

./: .gitmodules  README.md
src/igus_rebel_ros2/src/igus_rebel_description/urdf/: igus_rebel2.urdf
src/igus_rebel_ros2/src/igus_rebel_moveit_config/launch/: moveit.rviz
src/igus_student/: setup.py
src/igus_student/igus_student/: simple_robot_control.py  student_robot_control.py
src/sample_package/: package.xml  setup.cfg  setup.py
src/sample_package/sample_package/: README.md  keyboard_move_sample.py  roboter_template.py  student_template.py  test.py
