[metadata]
name = sample_package
version = 0.0.0
description = Sample ROS2 python package

[options]
packages = find:
install_requires =
    rclpy
    geometry_msgs
    control_msgs
    std_srvs

[options.entry_points]
console_scripts =
    test = sample_package.test:main
    
[develop]
script_dir=$base/lib/sample_package
[install]
install_scripts=$base/lib/sample_package

